--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 DB_DSN=postgresql+asyncpg://user:password@postgres:5435/db
 DB_SYNC_DSN=postgresql://user:password@postgres:5435/db
 
+# Superuser Credentials
+# ------------------------------------------------------------------------------
+ADMIN_USERNAME=user
+ADMIN_PASSWORD=password
+
 # PostgreSQL
 # ------------------------------------------------------------------------------
 POSTGRES_HOST=postgres
