--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = {extras = ["all"], version = "^0.110.0"}
 sqlalchemy = "^2.0.28"
 alembic = "^1.13.1"
 psycopg2 = "^2.9.9"
+asyncpg = "^0.28.0"
 a8t-tools = {version = "^0.2.0", extras = ["all"], source = "gitlab"}
 
 
