--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
+dependency-injector = "4.41.0"
 fastapi = {extras = ["all"], version = "^0.110.0"}
 sqlalchemy = "^2.0.28"
 alembic = "^1.13.1"
