--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ LOCAL_STORAGE_BASE_PATH=/media
 
 # Superuser Credentials
 # ------------------------------------------------------------------------------
+ADMIN_USERNAME=user
 ADMIN_EMAIL=user@mail.ru
 ADMIN_PASSWORD=password
 
