--- a/.env.example
+++ b/.env.example
@@ -296,7 +296,7 @@ TITLE27=Легенды Парижа
 SURVEY_ID27=9
 DESCRIPTION27=Отправьтесь на увлекательный культурный тур по Парижу и узнайте о его легендах и мифах. Исследуйте исторические места, связанные с загадочными историями и персонажами, которые делают этот город настолько уникальным.
 SHORT_DESCRIPTION27=Увлекательные истории и мифы.
-POINT27=8
+POINTS27=8
 DISTANCE27=9000
 TIME27=110
 PRICE27=0
